# Solvix

./: .gitignore  .solvix.yml  cli.py  config.py  pyproject.toml  requirements.txt
context/: assembler.py
docs/: Solvix-Claude-Code-Kickoff-Prompt.md  Solvix-Full-Story-Backlog.xlsx  Solvix-Master-Document.md
execution/: orchestrator.py  patch_applier.py  sandbox.py  test_runner.py
indexer/: __init__.py  chunker.py  embedder.py  manifest.py  pipeline.py  store.py  symbol_index.py
memory/: task_state.py
reasoning/: editor.py  linter.py  llm_client.py  planner.py  task_input.py
review/: pr_builder.py  pr_feedback.py
sample_repo/: .solvix.yml  calculator.py  pyproject.toml  report.py
sample_repo/tests/: test_calculator.py  test_strings.py
sample_repo/utils/: strings.py
tests/: conftest.py  test_assembler.py  test_chunker.py  test_cli.py  test_cli_history.py  test_config.py  test_editor.py  test_incremental_index.py  test_linter.py  test_llm_client.py  test_orchestrator.py  test_patch_applier.py  test_pipeline.py  test_planner.py  test_pr_builder.py  test_pr_feedback.py  test_run_task.py  test_runner.py  test_sandbox.py  test_symbol_index.py  test_task_input.py  test_task_state.py
